umol-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@rdkit_Issue3525799.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 21, col 0"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 21, col 0"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C15O2R10
    atom_count: 27
    bond_count: 29
    extended_atoms: 10
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C15O2R10
    atom_count: 27
    bond_count: 29
    extended_atoms: 10
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
